--- a/style.css
+++ b/style.css
@@ -1,69 +1,149 @@
 body {
-    background-color: rgb(0, 0, 66);
-  }
-  
-
-  * {color: white;
-    font-family: 'Secular One', sans-serif;
-    
-  }
-  h1 {
-      font-size: 4em;
-    color: yellow;
-    text-align: center;
-  }
-  h3{
-      text-align: center;
-  }
-  #outer {
-      border: 2px solid yellow;
-  }
-  img{
-   
-    width:12%;
-  }
-  li{
-    list-style-type: none; /* Remove bullets */
-  }
-  #leftcol{
-      float: left;
-      width: 50%;
-  }
-  #rightcol{
-      text-align: right;
-      padding-right: 40px;
-    float: right;
+  margin: 0;
+  padding: 0;
 }
-.clearfix {
-    overflow: auto;
-  }
-  button{
-        color: black;
-  }
+@font-face {
+  font-family: burbank;
+  src: url(BurbankBigCondensed-Bold.otf);
+  font-weight: bold;
+}
 
-#btnstuff{
-    display: flex;
-    height: 100px; /* Or whatever */
+
+* {color: white;
+  font-family: 'burbank', sans-serif;
+  
+}
+h1 {
+  font-size: 100px;
+  color: yellow;
+  text-align: center;
+  margin-bottom: 0;
+}
+h2 {
+  font-size: 43px;
+  margin-bottom: 0;
+  display: inline;
+  z-index: 30;
+}
+h3{
+  font-size: 38px;
+  text-align: center;
+  margin-top: 0;
+}
+#outer {
+  width: 1278px;
+  background-image: url(images/background.png);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  height: 800px;
+  position: relative;
+}
+img{
+  height:100%;
+  width: 100%;
+ 
+}
+li{
+  list-style-type: none; /* Remove bullets */
+  font-size: 24px;
+  padding-left: 15px;
+  padding-right: 15px;
+  color: rgb(170, 170, 170);
+}
+#leftcol{
+  padding-top: 50px;
+  float: left;
+  width: 50%;
+}
+#rightcol{
+  padding-top: 50px;
+  text-align: right;
+  padding-right: 40px;
+  float: right;
+}
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
 }
 button{
-    display: block;
-    margin: 0 auto;
+  color: black;
+}
+
+#btnstuff{
+  display: flex;
+  height: 100px; /* Or whatever */
+}
+button{
+  display: block;
+  margin: 0 auto;
 }
 .btngroup{
-    border: 1px solid black;
-     width:12%
+  border: 1px solid black;
+  width:12%
 }
 .box{
-    background-color: black;
+  background-color: black;
 }
 .box.active-animation {
-    animation: party 5s infinite;
-  }
-  @keyframes party{
-    0% {background-color: red;}
-    10% {background-color: orange;}
-    20% {background-color: yellow;}
-    30% {background-color: green;}
-    40% {background-color: blue;}
-    50% {background-color: purple;} 
+  animation: party 5s infinite;
+}
+@keyframes party{
+  0% {background-color: red;}
+  10% {background-color: orange;}
+  20% {background-color: yellow;}
+  30% {background-color: green;}
+  40% {background-color: blue;}
+  50% {background-color: purple;} 
+}
+.epImages{
+  margin-top: 12px;
+  margin-left: 15.5px;
+  margin-right: 14.5px;
+  margin-bottom: 10px;
+  height: 275px;
+}
+.epParent{
+  height: 100%;
+  width:156px;
+  padding:0;
+  margin: 0;
+  float: left;
+  position: relative;
+  display: block;
+}
+.overlay{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: px;
+}
+.ep{
+  filter: grayscale(0%);
+}
+.team1Image{
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 231px;
+  width: 308px;
+  z-index: 1;
+}
+.team2Image{
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 231px;
+  width: 308px;
+  z-index: 1;
+}
+#team1Record{
+  font-size: 36px;
+  padding-left: 10px;
+  color: yellow;
+}
+#team2Record{
+  font-size: 36px;
+  padding-right: 10px;
+  color: yellow;
 }
